# mtgqt

./: pyproject.toml  setup.py
mtgqt/pixmapload/: pixmaploader.py
