[project]
name = "mtgqt"

[tool.isort]
profile = "black"
lines_after_imports = 2
honor_noqa = true

[tool.black]
line-length = 119

[tool.poetry]
name = "mtgqt"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "~3.9"
Pillow = "~9.4"
PyQt5 = "~5.15"
PyQt5-Qt5 = "~5.15"
promise = "~2.3"
mtgorp = { git = "https://github.com/guldfisk/mtgorp.git" }
mtgimg = { git = "https://github.com/guldfisk/mtgimg.git" }


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
